'added-create-an-account-page'

--- a/UI/index.html
+++ b/UI/index.html
@@ -39,10 +39,18 @@
                 </div>
                 <input type="submit" value="LOGIN" class="btn">
                 <p> 
-                    <a href="./register.html">register</a> if you dont't have an account.</p>
+                    <a href="./create-account.html">register</a> if you dont't have an account.</p>
             </div>
         </form>
     </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <h3>iReporter, &copy; 2018</h3>
+    </div>
+    </footer>
+    </div>
+
 </body>
 </html>
