add UI/admin page

--- a/UI/admin-login.html
+++ b/UI/admin-login.html
@@ -27,18 +27,16 @@
     <section id="login-area">
         <div class="container">
 
-            <form class="login-form" action='./user-profile.html'>
+            <form class="login-form" action='./admin-profile.html'>
                 <div class="login-box">
-                <h1>User Login</h1>
+                <h1>Admin Login</h1>
                 <div class="login-textbox">
-                    <input type="text" placeholder="Username" id="username">
+                    <input type="text" id='adminUsername' placeholder="Username" id="username">
                 </div>
                 <div class="login-textbox">
-                    <input type="password" placeholder="Password" id="password">
+                    <input type="password" id='adminPassword' placeholder="Password" id="password">
                 </div>
-                <input type="submit" value="LOGIN" class="btn">
-                <p> 
-                    <a href="./create-account.html">register</a> if you dont't have an account.</p>
+                <input type="submit" id='adminLoginButton' value="LOGIN" class="btn">
                 </div>
             </form>
         </div>
