--- a/UI/create-account.html
+++ b/UI/create-account.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/index.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/create-account.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/create-account.css"/>
 </head>
 
 <body class="register-body">
@@ -15,13 +15,13 @@
     <div class="container">
         <div id="header-title">
         <a href="./index.html">
-            <img src="/images/logo.png" alt="logo" />
+            <img src="./images/logo.png" alt="logo" />
         </a>
         </div>
         <nav>
         <ul>
             <li><a href="./user-profile.html">User</a></li>
-            <li><a href="./admin.html">Admin</a></li>
+            <li><a href="./admin-login.html">Admin</a></li>
         </ul>
         </nav>
     </div>
@@ -37,7 +37,7 @@
             <!-- <strong>Warning!</strong> Wrong credentials -->
         </p>
         </div>
-        <form id="register_form">
+        <form id="register_form" action="./user-profile.html">
         <div class="register-box">
             <h1>Sign Up</h1>
             <div class="register-textbox">
