--- a/UI/create-intervention-record.html
+++ b/UI/create-intervention-record.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="./admin.html">Admin</a>
+                        <a href="./admin-login.html">Admin</a>
                     </li>
                 </ul>
             </nav>
