--- a/UI/create-intervention-record.html
+++ b/UI/create-intervention-record.html
@@ -35,6 +35,7 @@
             <textarea placeholder="Details" required></textarea>
             <input type="file" id="image">
             <button onclick="getLocation()">Add Geolocation</button>
+            <p id='showLocation'></p>
             <input type="submit" value="SUBMIT REPORT" id="sendButton">
         </form>
     </section>
@@ -43,6 +44,8 @@
             <h3>Store Manager, 2018</h3>
         </div>
     </footer>
+
+<script src="./js/user-profile.js"></script>
 </body>
 
 </html>
