update admin profile

--- a/UI/admin-profile.html
+++ b/UI/admin-profile.html
@@ -34,7 +34,7 @@
                     <td></td>
                     <td></td>
                     <td>view</td>
-                    <td id='post-status'></td>
+                    <td id='post-status'>status</td>
                     <td></td>
 
                     <td><button class="delete">Delete</button><button class="edit">Edit</button></td>
