--- a/UI/create-intervention-record.html
+++ b/UI/create-intervention-record.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/create-intervention.css" rel="stylesheet" type="text/css">             
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="./css/create-intervention.css" rel="stylesheet" type="text/css">             
     <title>iReporter/Create Intervention Record</title>
 </head>
 
-<body id="intervention-body">
+<body>
     <header>
         <div class="container">
             <div id="header-title">
@@ -39,11 +39,12 @@
             <input type="submit" value="SUBMIT REPORT" id="sendButton">
         </form>
     </section>
-    <footer>
+    
+<footer>
         <div class="container">
-            <h3>Store Manager, 2018</h3>
+                <h3>iReporter, &copy; 2018</h3>
         </div>
-    </footer>
+</footer>
 
 <script src="./js/user-profile.js"></script>
 </body>
