--- a/admin-profile.html
+++ b/admin-profile.html
@@ -11,40 +11,49 @@
 </head>
 
 <body>
+      <header>
+            <div class="container">
+                <div id="header-title">
+                    <a href="./index.html">
+                        <img src="images/logo.png" alt="logo">
+                    </a>
+                </div>
+            </div>
+      </header>
 
-        <h2 class="attendant-container-title all-products-info">all record</h2>
-        <input type="text" id="myInput" placeholder='Search by attendant name..'>
-        <div class="down-info-container">
-           <table class="table3 searchTable">
-              <thead>
-                 <tr>
-                    <th>ATTENDANT NAME</th>
-                    <th>ID</th>
-                    <th>RECORD TYPE</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+      <h2 class="attendant-container-title all-products-info">all record</h2>
+      <input type="text" id="myInput" placeholder='Search by attendant name..'>
+      <div class="down-info-container">
+         <table class="table3 searchTable">
+            <thead>
+               <tr>
+                  <th>ATTENDANT NAME</th>
+                  <th>ID</th>
+                  <th>RECORD TYPE</th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
 
-                    <th>OPERATION</th>
-                 </tr>
-              </thead>
-              <tbody>
-                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>view</td>
-                    <td id='post-status'>status</td>
-                    <td></td>
+                  <th>OPERATION</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>view</td>
+                  <td id='post-status'>status</td>
+                  <td></td>
 
-                    <td><button class="delete">Delete</button><button class="edit">Edit</button></td>
-                 </tr>
-                 
-              </tbody>
-           </table>
-        </div>
+                  <td><button class="delete">Delete</button><button class="edit">Edit</button></td>
+               </tr>
+               
+            </tbody>
+         </table>
+      </div>
 
-<footer>
+<footer id='admin-footer'>
         <div class="container">
             <h3>iReporter, &copy; 2018</h3>
         </div>
