--- a/user-profile.html
+++ b/user-profile.html
@@ -75,7 +75,7 @@
         </table>
         </div>
     </div>
-    <footer>
+    <footer id='user-footer'>
         <div class="container">
             <h3>iReporter, &copy; 2018</h3>
         </div>
