--- a/create-redflag-record.html
+++ b/create-redflag-record.html
@@ -45,7 +45,7 @@
     
     <footer>
         <div class="container">
-            <h3>Store Manager, 2018</h3>
+            <h3>iReporter, &copy; 2018</h3>
         </div>
     </footer>
 
