rectify footer position issue

--- a/UI/admin-profile.html
+++ b/UI/admin-profile.html
@@ -21,9 +21,9 @@
             </div>
       </header>
 
-      <h2 class="attendant-container-title all-products-info">all record</h2>
+      <h2 class="all-record-info">all record</h2>
+      <div class="container">
       <input type="text" id="myInput" placeholder='Search by attendant name..'>
-      <div class="down-info-container">
          <table class="table3 searchTable">
             <thead>
                <tr>
@@ -51,6 +51,7 @@
                
             </tbody>
          </table>
+         </div>
       </div>
 
 <footer id='admin-footer'>
