--- a/create-account.html
+++ b/create-account.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/create-account.css"/>
 </head>
 
-<body class="register-body">
+<body>
 <div class="register-showcase">
     <header>
     <div class="container">
@@ -76,14 +76,16 @@
         </form>
     </div>
     </section>
+</div>
 
-<footer>
+<br>
+
+    <footer>
     <div class="container">
         <h3>iReporter, &copy; 2018</h3>
     </div>
 </footer>
 
-</div>
         
 </body>
 </html>
