--- a/admin-profile.html
+++ b/admin-profile.html
@@ -21,9 +21,9 @@
             </div>
       </header>
 
-      <h2 class="all-record-info">all record</h2>
-      <div class="container">
+      <h2 class="attendant-container-title all-products-info">all record</h2>
       <input type="text" id="myInput" placeholder='Search by attendant name..'>
+      <div class="down-info-container">
          <table class="table3 searchTable">
             <thead>
                <tr>
@@ -51,7 +51,6 @@
                
             </tbody>
          </table>
-         </div>
       </div>
 
 <footer id='admin-footer'>
