--- a/UI/create-account.html
+++ b/UI/create-account.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/create-account.css"/>
 </head>
 
-<body>
+<body class='register-body'>
 <div class="register-showcase">
     <header>
     <div class="container">
@@ -76,7 +76,7 @@
         </form>
     </div>
     </section>
-</div>
+
 
 <br>
 
@@ -85,7 +85,7 @@
         <h3>iReporter, &copy; 2018</h3>
     </div>
 </footer>
-
+</div>
         
 </body>
 </html>
