[#162441413] Update forms/header links/sign-in & sign-up buttons

--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
                 <div id="header-title">
                     <a href="./index.html">iReport</a>
                 </div>
-
-        <nav>
-            <ul>
-                <li><a href="./admin-login.html">Admin</a></li>
-            </ul>
-        </nav>
             </div>
         </header>
                 
@@ -29,7 +23,7 @@
 
             <form class="login-form" action='./user-profile.html'>
                 <div class="login-box">
-                <h1>User Login</h1>
+                <h1>Login</h1>
                 <div class="login-textbox">
                     <input type="text" placeholder="Username" id="username">
                 </div>
