--- a/create-account.html
+++ b/create-account.html
@@ -10,23 +10,16 @@
 </head>
 
 <body class='register-body'>
-<div class="register-showcase">
     <header>
     <div class="container">
         <div id="header-title">
-        <a href="./index.html">
-            <img src="./images/logo.png" alt="logo" />
-        </a>
+            <a href="./index.html">
+                <img src="./images/logo.png" alt="logo" />
+            </a>
         </div>
-        <nav>
-        <ul>
-            <li><a href="./user-profile.html">User</a></li>
-            <li><a href="./admin-login.html">Admin</a></li>
-        </ul>
-        </nav>
     </div>
     </header>
-
+    <div class="register-showcase">
     <section id="register-area">
     <div class="container">
         <div class="alert error">
@@ -41,12 +34,28 @@
         <div class="register-box">
             <h1>Sign Up</h1>
             <div class="register-textbox">
-            <input
-                type="text"
-                placeholder="Fullname"
-                id="fullname"
-                required
-            />
+                <input
+                    type="text"
+                    placeholder="Firstname"
+                    id="lastname"
+                    required
+                />
+            </div>
+            <div class="register-textbox">
+                <input
+                    type="text"
+                    placeholder="Lastname"
+                    id="lastname"
+                    required
+                />
+            </div>
+            <div class="register-textbox">
+                <input
+                    type="text"
+                    placeholder="Othernames"
+                    id="othernames"
+                    required
+                />
             </div>
             <div class="register-textbox">
             <input
@@ -55,9 +64,6 @@
                 id="username"
                 required
             />
-            </div>
-            <div class="register-textbox">
-            <input type="text" placeholder="occupation" id="occupation" required />
             </div>
             <div class="register-textbox">
             <input type="email" placeholder="Email" id="email" required />
