--- a/user-profile.html
+++ b/user-profile.html
@@ -21,6 +21,10 @@
             <nav>
                 <ul>
                     <li>
+                            <a href="./admin-profile.html">Admin</a>
+                    </li>
+
+                    <li>
                         <a href="#">View Records</a>
                     </li>
                 </ul>
@@ -29,7 +33,7 @@
     </header>
 
     <section class='user-section'>
-
+        <div class='container'>
         <div class='User-details'>
                 <div class= 'container'>
                     <ul>
@@ -43,7 +47,8 @@
             <div class='container'>
                 <h1> Create Red-Flag Record</h1>
                 <p>Do you want to submit a form of corruption? OR need government intervention 
-                    (e.g repair bad road sections, collapsed bridges, flooding e.t.c) 
+                    (e.g repair bad road sections, collapsed bridges, flooding e.t.c). 
+                    <br> 
                     Report!  Click <a class='createlink' href='./create-record.html'>HERE!</a></p>            
             </div>
         </div>
@@ -51,9 +56,55 @@
 
         <div id='showRecords'>
             <div class='container'>
+                    <h1>Summary</h1>
+                    <div class="Summary">
+                        Resolved : <span class="sum">2</span> resolved records
+                        <br>
+                        Draft : <span class="sum">5</span> records under Investigaton 
+                        <br>
+                        Rejected : <span class="sum">3</span> records have been rejected
+                    </div>
+                
+                
                 <h2>View Records</h2>
-                <p>Show, edit and delete records here </p>
+                <p>Show, edit and delete records here</p>
+                <div class='tbody'>
+                <table>
+                        <thead>
+                        <tr>
+                            <th>CreatedOn</th>
+                            <th>Type</th> 
+                            <th>Location</th>
+                            <th>Status</th>
+                            <th>More</th>
+                        </tr>
+                      </thead>
+                        <tr>
+                          <td>03/11/2018</td>
+                          <td>red flag</td>
+                          <td>Badagry</td>
+                          <td>draft</td>
+                          <td>
+                            <button class="edit">edit</buttpn>
+                            <button class="delete">delete</button>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>01/06/2018</td>
+                          <td>intervention</td>
+                          <td>Apapa</td>
+                          <td>rejected</td>
+                          <td>
+                            <button class="edit">edit</buttpn>
+                            <button class="delete">delete</button>
+                          </td>
+                        </tr>
+
+                      </table>
+                </div>
+
             </div>
+        </div>
         </div>
     </section>
 
