--- a/create-record.html
+++ b/create-record.html
@@ -47,6 +47,11 @@
                 <input type="file" id="imageUpload" title ='imageupload' accept="image/png, image/jpeg" multiple>
             </div>
 
+            <div class='inputBttn'>
+                <label for="videoUpload">Upload an Image: </label>
+                <input type="file" id="videoUpload" title ='videoupload'>
+            </div>
+
             <button onclick="getLocation()">Add Geolocation</button>
             <p id='showLocation'></p>
             
