--- a/create-record.html
+++ b/create-record.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class='inputBttn'>
-                <label for="videoUpload">Upload an Image: </label>
+                <label for="videoUpload">Upload Video: </label>
                 <input type="file" id="videoUpload" title ='videoupload'>
             </div>
 
