--- a/admin-login.html
+++ b/admin-login.html
@@ -41,13 +41,14 @@
             </form>
         </div>
     </section>
-
-    <footer>
+    </div>
+<br>
+<br>
+    <footer id='admin-footer'>
         <div class="container">
             <h3>iReporter, &copy; 2018</h3>
     </div>
     </footer>
-    </div>
 
 </body>
 </html>
